Add linkedin link

--- a/www/index.html
+++ b/www/index.html
@@ -50,6 +50,9 @@
   <div id="title">
     <h1>Data Alchemy</h1>
     <p>Full Stack Data Science.</p>
+    <p>
+      <a href="https://www.linkedin.com/in/philippeperet/">Linkedin</a>
+    </p>
   </div>
 
   <!-- Footer -->
